# business-tg-bot

./: .gitignore  docker-compose.yml
bot/: Cargo.toml  Dockerfile
bot/.sqlx/: query-1bf776bb977aeb111c8af50621524271cc2dd04208da8d906da534c1e259310e.json  query-2ae42cf43a17c8fecb46637b688373d656689032320bf7babf87b28b4eb608ac.json  query-31981ccb4d42df96b2d8bc0e6cbed32b6e44a0245cad0c38a6a283d726f7ca7e.json  query-66effa9e3fb481d36bbe87d310a66b210c182ecff9288a047e294f38e8f5545d.json  query-c1f3f439653b447e7906aff1a969097ec3be107e04c9601e91989c72456ee050.json  query-e977935abd39104af6e8c08260ed279ea56c634be130661af0aa090117736549.json
bot/files/: help_text.txt
bot/migrations/: 20240606164532_users.up.sql
bot/src/: conversation.rs  db.rs  dialogue.rs  main.rs  user.rs
