[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
tgbot = "0.24.0"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-native-tls", "migrate", "chrono" ] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
derivative = "2.2.0"
async-openai = "0.23.0"
